--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -96,3 +96,75 @@
   text-align: left;
   text-transform: none;
 }
+
+.blog__statistic {
+  background: linear-gradient(rgba(0, 0, 0, 0.6),
+  rgba(0, 0, 0, 0.6)),
+    url("../images/bg_image_people.png");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 500px;
+}
+
+.blog__statistic-cards {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 157px;
+}
+
+.blog__statistic-card {
+  width: 111px;
+  height: 111px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.card1 {
+  background-image: url("../images/card_1.png");
+}
+
+.card2 {
+  background-image: url("../images/card_2.png");
+}
+
+.card3 {
+  background-image: url("../images/card_3.png");
+}
+
+.card4 {
+  background-image: url("../images/card_4.png");
+}
+
+.card5 {
+  background-image: url("../images/card_5.png");
+}
+
+.card_circle {
+  margin-bottom: 150px;
+}
+
+.card__statistic-title {
+  font-size: 12px;
+  color: #f4f5f9;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 30px;
+  text-align: center;
+}
+
+.card__statistic-bold {
+  font-size: 30px;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: 1.5px;
+  line-height: normal;
+}
